--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,10 +5,12 @@
   </head>
   <body>
 <h1>My first web page</h1>
-<h2>Written by Serg</h2>
+<h2>Written by <em>Serg</em></h2>
 
-<p>This is my first web page!</p>
+<p>This is my <strong> first web page</strong>!</p>
 <p>Isn't it nice?</p>
+<img src="http://images.clipartpanda.com/smiley-face-clip-art-niXoRMbiB.png" alt="A photo of a smiley">
+<p>Here is a link to my <a href="favorite-things.html"> favorite things</a></p>
 
 <p>Here are some things I'm going to learn about coding:</p>
 <ul>
