change name from favorite-things.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<link href="css/styles.css" rel="stylesheet" type="text/css">
     <title> Serg's favorite things</title>
   </head>
   <body>
@@ -15,6 +16,8 @@
         <ul>
           <li>Nguyen</li>
           <li>Adrian</li>
+          <li>Billy</li>
+          <li>Vincent</li>
         </ul>
       </li>
       <li>My friend Jessica</li>
